src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/arity-mismatch.tessla
def foo(a: Int) := a + 5

out foo(5, 2)